## 47.beta (2024-08-02)

### Added

- Add reload button to errors and F5 as reload shortcut

### Fixed

- Don't show error-screen if SVG has been loaded and only the rendering for tiles for other zoom levels fails. Instead, show the already loaded tiles.
- Fixed that some actions are available on error pages and loading screens while they are not actually useful. This includes actions like zoom, rotate, and print.
- No longer empty the animation buffer if next frame isn't available yet. This removes flickering for larger and high FPS animations on slower systems.
- Zoom into viewport center via buttons. Before, the image center was used, which would cause a jump if the viewport had been changed.

### Changed

- Changed the drag and drop overlay to use accent colors instead of a fixed color. This also makes it follow the new adjustable accent colors.
- Don't emmediately show the spinner for loading images. This avoids fresh spinners showing up each time when switching through images very quickly via keyboard.
- Make strings that contain `\u{<hex>}` translatable
- No longer overwrite GTKs default renderer with 'gl'. The latest patches in GTK seem to make the Vulkan renderer work fine.
- The properties no longer use the deprecated AdwFlap widget. For very small windows, properties are now shown in an AdwBottomSheet.
- Use AdwSpinner when loading images.
- Use glycin's auto detection of development mode to disable sandbox.

## 47.alpha (2024-06-28)

### Added

- New dialog to show and copy error details
- Rotating JPEG images with an orientation Exif entry will now change that entry

### Fixed

- Disable markup in property rows

### Changed

- Follow the Rust Style Guide for Cargo.toml and .rs filenames
- Image delete confirmation now uses AdwAlertDialog
- Make error messages translatable and look nicer
- Move many shortcuts to window level instead of using app accels
- Replace AdwAboutWindow with AdwAboutDialog !376
- Use new GtkPrintDialog API #144

46.2
====
