@@ -1,6 +1,6 @@
 [package]
 name = "loupe"
-version = "47.0.0-beta"
+version = "47.0.0-beta.1"
 edition = "2021"
 rust-version = "1.76"
 license = "GPL-3.0-or-later"
