@@ -71,9 +71,9 @@
   </categories>
 
   <releases>
-    <release version="47.beta" date="2024-08-02">
+    <release version="47.beta" date="2024-08-13">
       <description>
-        <p>Beginning with this release, rotating an image will write this change to image files. For now, this feature is only supported for JPEG files. Several user interface elements have been updated to more recent design patterns.</p>
+        <p>Rotating an image will now write the new orientation to the image files. For now, this feature is only supported for JPEG files. Several user interface elements have been updated to more recent design patterns.</p>
       </description>
     </release>
     <release version="46.2" date="2024-04-09">
